added encapsulated styles, themes, new build process

--- a/index.html
+++ b/index.html
@@ -9,89 +9,24 @@
     <script src="bower_components/platform/platform.js"></script>
 
     <!-- Importing Custom Elemenent -->
-    <link rel="import" href="src/brick-appbar.html">
+    <link rel="import" href="dist/brick-appbar.local.html">
 
     <style>
-      .simple {
-        color: #666;
-        background-color: #ddd;
-        background-image: none;
-        font-size: 2.5rem;
-      }
-
-      brick-appbar.simple > *:before {
-        top: 3px;
-        bottom: 3px;
-      }
-
-      .ffos {
-        color: white;
-        background-image: none;
-        background-color: orange;
-      }
-
-      .ffos button {
-        background-color: orange;
-      }
-
-      .ffos button:hover {
-        background-color: rgb(255, 198, 0);
-      }
-
-      brick-appbar.ffos > *:before {
-        top: 3px;
-        bottom: 3px;
-      }
-      brick-appbar.ffos {
-        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      }
-
-      #mobile-device {
-        height: 200px;
-        width: 320px;
-        border: solid 1px black;
-        background-color: #dedede;
-      }
-
-      h2 {
-        font-size: 24pt;
+      body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
       }
     </style>
   </head>
   <body>
 
     <!-- Using Custom Element -->
-    <h1>AppBar demo</h1>
-
-    <brick-appbar heading="default">
+    <brick-appbar>
       <button>☰</button>
-      <button>+</button>
-      <button>?</button>
+      <h1>Title</h1>
+      <button>Done</button>
     </brick-appbar>
-
-    <br />
-
-    <brick-appbar class="simple">
-      <button>☰</button>
-      <h2>Simple Styles</h2>
-      <button>+</button>
-      <button>-</button>
-      <button>?</button>
-    </brick-appbar>
-
-    <br />
-
-    <div id="mobile-device">
-      <brick-appbar class="simple ffos" subheading="(2)">
-        <button>☰</button>
-        <h2>Messages</h2>
-        <button>+</button>
-      </brick-appbar>
-      <ul>
-       <li>Message 1</li>
-        <li>Message 2</li>
-      <ul>
-    </div>
 
   </body>
 </html>
