--- a/src/brick-appbar.html
+++ b/src/brick-appbar.html
@@ -1,2 +1,6 @@
-<link rel="stylesheet" href="brick-appbar.css">
+<template>
+  <link rel="stylesheet" href="brick-appbar.css">
+  <link rel="stylesheet" href="themes/default/default.css">
+  <content></content>
+</template>
 <script src="brick-appbar.js"></script>
